--- a/templates/Signup.html
+++ b/templates/Signup.html
@@ -1,71 +1,89 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<form style="border:1px solid #ccc" method="post" id="signup_form">
-  <div class="container">
-    <h1>Sign Up</h1>
-    <p>Please fill in this form to create an account.</p>
-    <hr>
 
-    <label for="name"><b>Name</b></label>
-    <input type="text" placeholder="Enter Name" name="name" required>
-    
-    <label for="address"><b>Address</b></label>
-    <input type="text" placeholder="Enter Home Address" name="Address" required>
-    
-    <label for="UK_city"><b>UK_city</b></label>
-    <input type="text" placeholder="Enter city in UK" name="UK_city" required>
-     
-    <label for="email"><b>Email</b></label>
-    <input type="email" placeholder="Enter Email" name="email" required>
+<!DOCTYPE html>
+<html>
+<head>
+<title>SignUp Form</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+<link href="{{ url_for('static', filename='/styles/style.css') }}" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+</head>
+<body>
+	<!-- main -->
+	<div class="main-w3layouts wrapper">
+		<h1>UNISUPPORT</h1><br>
+		<h4>Registration Form</h4>
 
-    <label for="psw-repeat"><b>Repeat Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-    <label for="University">Choose 1st preference:</label>
-    <select name="University1" id="University">
-      <option disabled selected value>-- select an option -- </option>
-      <option value="Queen Mary University of London">QMUL</option>
-      <option value="London School of Economics">LSE</option>
-      <option value="Kings college of London">Kings</option>
-      <option value="Imperial">Imperial</option>
-    </select>
-
-    <label for="University">Choose 2nd preference:</label>
-    <select name="University2" id="University">
-      <option disabled selected value>-- select an option -- </option> 
-      <option value="Queen Mary University of London">QMUL</option>
-      <option value="London School of Economics">LSE</option>
-      <option value="Kings college of London">Kings</option>
-      <option value="Imperial">Imperial</option>
-    </select>
-
-    <label for="University">Choose 3rd preference:</label>
-    <select name="University3" id="University">
-      <option disabled selected value>-- select an option -- </option>
-      <option value="Queen Mary University of London">QMUL</option>
-      <option value="London School of Economics">LSE</option>
-      <option value="Kings college of London">Kings</option>
-      <option value="Imperial">Imperial</option>
-    </select>
-
-    <label>
-      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-    </label>
-
-    <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-    <div class="clearfix">
-      <button type="button" class="cancelbtn">Cancel</button>
-      <button type="submit" class="signupbtn" name="submit" id="submit_form">Sign Up</button>
-    </div>
-  </div>
-</form>
-
-<script>
-<!--alert('test');-->
-  $('#submit_form').click({
-    alert('hello');
-  });
-</script>
+		<div class="main-agileinfo">
+			<div class="agileits-top">
+				<form action="#" method="post">
+					{% if message %}
+					<p class=error align="center" style="color:red"><strong>Message:</strong>{{ message }}</p><br>
+  					{% endif %}
+					<input class="text" type="text" name="name" placeholder="Enter Name" required=""><br>
+					<input class="text" type="text" name="Address" placeholder="Enter Address" required=""><br>
+					<input class="text" type="text" name="UK_city" placeholder="Enter UK City" required=""><br>
+					<input class="text" type="email" name="email" placeholder="Enter Email" required=""><br>
+					<input class="text" type="password" name="psw" placeholder="Enter Password" required=""><br>
+					<input class="text" type="text" name="psw" placeholder="Repeat Password" required=""><br>
+					<select class="form-select" name="University1" aria-label="Default select example" style="width:95%;background-color:#8DC26F;color: white;">
+					  <option disabled selected value>Choose 1st preference</option> 
+					    <option value="Queen Mary University of London">QMUL</option>
+					    <option value="London School of Economics">LSE</option>
+					    <option value="Kings college London">Kings</option>
+					    <option value="Imperial College London">Imperial</option>
+						<option value="Oxford University">Oxford</option>
+						<option value="University of Edinburgh">Edinburgh</option>
+						<option value="University of Manchester">Manchester</option>
+						<option value="University of Warwick">Warwick</option>
+						<option value="University of Glasgow">Glasgow</option>
+						<option value="University of Cambridge">Cambridge</option>
+					</select>
+					<br>
+					<select class="form-select" name="University2"  aria-label="Default select example" style="width:95%;background-color:#8DC26F;color: white;">
+					  <option disabled selected value>Choose 2nd preference</option> 
+					    <option value="Queen Mary University of London">QMUL</option>
+					    <option value="London School of Economics">LSE</option>
+					    <option value="Kings college London">Kings</option>
+					    <option value="Imperial College London">Imperial</option>
+						<option value="Oxford University">Oxford</option>
+						<option value="University of Edinburgh">Edinburgh</option>
+						<option value="University of Manchester">Manchester</option>
+						<option value="University of Warwick">Warwick</option>
+						<option value="University of Glasgow">Glasgow</option>
+						<option value="University of Cambridge">Cambridge</option>
+					</select>
+					<br>
+					<select class="form-select" name="University3" aria-label="Default select example" style="width:95%;background-color:#8DC26F;color: white;">
+					  <option disabled selected value>Choose 3rd preference</option> 
+					    <option value="Queen Mary University of London">QMUL</option>
+					    <option value="London School of Economics">LSE</option>
+					    <option value="Kings college London">Kings</option>
+					    <option value="Imperial College London">Imperial</option>
+						<option value="Oxford University">Oxford</option>
+						<option value="University of Edinburgh">Edinburgh</option>
+						<option value="University of Manchester">Manchester</option>
+						<option value="University of Warwick">Warwick</option>
+						<option value="University of Glasgow">Glasgow</option>
+						<option value="University of Cambridge">Cambridge</option>
+					</select>
+					<br>
+					<!-- <div class="wthree-text">
+						<label class="anim">
+							<input type="checkbox" class="checkbox" required="">
+							<span>I Agree To The Terms & Conditions</span>
+						</label>
+						<div class="clear"> </div>
+					</div> -->
+					<input type="submit" value="SIGNUP">
+				</form>
+				<p><a href="signin"> Login</a></p>
+			</div>
+		</div>
+		
+	</div>
+	<!-- //main -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
