--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<link href="style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="{{ url_for('static', filename='/styles/style.css') }}" rel="stylesheet" type="text/css" media="all" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -70,110 +70,61 @@
 .left-caret:after
 { border-right: 5px solid #ffaf46;
 }
-
-Resources
+.col-md-3
+{
+width:30%!important;
+margin-left:2%!important;
+}
   </style>
 </head>
 <body>
 	<!-- main -->
-	{% if message %}
-		<p class=error align="center" style="color:green"><strong>Message:</strong>{{ message }}</p><br>
-	{% endif %}
-	<div class="main-w3layouts wrapper">
-		
-	<nav class="navbar navbar-default" style="width:10%;margin-left:2%;">
-        <div class="">
-          
-          <div >
-            <ul class="nav navbar-nav" >
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">User Profile</a></li>
-                  
-                  <li><a href="#"><button class="btn btn-default">Logout</button></a></li>
-                  
-                  
-                </ul>
-              </li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
+	{% with messages = get_flashed_messages() %}
+  		{% if messages %}
+    		{% for message in messages %}
+      			<p class=error style="color:black" align="center"><strong>Message:</strong>{{ message }}
+    		{% endfor %}
+  		{% endif %}
+	{% endwith %}
+
+	<div class="main-w3layouts wrapper" style="padding:2%">
+		<div>
+			<p align="left">Name:{{Name}}</p>
+			<p align="left">Current Address:{{Address}}</p>
+			<form action="/dashboard" method="post">
+				<input class="text" type="text" name="address_update" placeholder="Update your address">
+				<input type="submit" value="Update" class="col-md-3">
+				<input type="submit" name='delete' value="Delete My Data"  class="col-md-3">
+				<input type="submit" name="logout" value='Logout'  class="col-md-3">
+			</form><br>
+		</div>
+		<div style="margin-top:7%;">
+		<p align="left">UK City:{{UK_city}}</p>
+		<p align="left">Email:{{Email}}</p>
+		<p align="left">First Pref:{{first_pref}}</p>
+		<p align="left">Second Pref:{{sec_pref}}</p>
+		<p align="left">Third Pref:{{third_pref}}</p>
+		</div>
 		<h1>Recommendation</h1>
 		<div class="main-agileinfo" style="width:95%">
 			<div class="agileits-top">
-				<!-- Static navbar -->
-      
 				<div class="row">
 					<div class="col-md-12">
 						<h4>Accommodation Details</h4>
 						<div class="container" style="width:100%">
-						  	<table class="table table-bordered">
-							  	<thead>
-								    <tr>
-								      <th scope="col">#</th>
-								      <th scope="col">First</th>
-								      <th scope="col">Last</th>
-								      <th scope="col">Handle</th>
-								    </tr>
-								</thead>
-							  	<tbody>
-								    <tr>
-								      <th scope="row">1</th>
-								      <td>Mark</td>
-								      <td>Otto</td>
-								      <td>@mdo</td>
-								    </tr>
-								    <tr>
-								      	<th scope="row">2</th>
-								      	<td>Jacob</td>
-								      	<td>Thornton</td>
-								      	<td>@fat</td>
-								    </tr>
-								    <tr>
-								      	<th scope="row">3</th>
-								      	<td>Larry</td>
-								      	<td>the Bird</td>
-								      	<td>@twitter</td>
-								    </tr>
-								</tbody>
-							</table>
+						{% for re in rents %}
+            				{{ re|safe }}
+						{% endfor %}
 						</div>
 					</div>
+				</div>
+				<div class="row">
 					<div class="col-md-12">
 						<h4>Job Details</h4>
 						<div class="container" style="width:100%">
-				  			<table class="table table-bordered">
-					  <thead>
-					    <tr>
-					      <th scope="col">#</th>
-					      <th scope="col">First</th>
-					      <th scope="col">Last</th>
-					      <th scope="col">Handle</th>
-					    </tr>
-					  </thead>
-					  <tbody>
-					    <tr>
-					      <th scope="row">1</th>
-					      <td>Mark</td>
-					      <td>Otto</td>
-					      <td>@mdo</td>
-					    </tr>
-					    <tr>
-					      <th scope="row">2</th>
-					      <td>Jacob</td>
-					      <td>Thornton</td>
-					      <td>@fat</td>
-					    </tr>
-					    <tr>
-					      <th scope="row">3</th>
-					      <td>Larry</td>
-					      <td>the Bird</td>
-					      <td>@twitter</td>
-					    </tr>
-					  </tbody>
-							</table>
+						{% for jo in jobs %}
+            				{{ jo|safe }}
+						{% endfor %}
 						</div>
 					</div>
 				</div>
